--- a/Notes/01 基本概念.md
+++ b/Notes/01 基本概念.md
@@ -279,7 +279,7 @@ int MaxSubseqSum4( int A[], int N )
 { 
 	int ThisSum, MaxSum;
 	int i;
-	ThisSum = MaxSum = 0;
+	ThisSum = MaxSum = 0;(把连续和加到最新的数上，如果连续和<0，没有加的必要直接抛弃也就是s=0重置）
 	for( i = 0; i < N; i++ ) {
 		ThisSum += A[i]; /* 向右累加 */ 
 		if( ThisSum > MaxSum )
